--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="ja">
 
 <head>
-    <meta charset="utf-8">
     <title>SDGs Search</title>
+    <meta charset="utf-8">
+    <meta name=”robots” content=”noindex”/>
+    <meta name=”robots” content=”nofollow”/>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <script src="https://unpkg.com/vue-simple-suggest"></script>
